--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <!-- nanti ejas balik nama mp3 -->
     <audio id="birthday-audio" autoplay loop>
-        <source src="ainstrument.mp3" type="audio/mpeg">
+        <source src="instrument.mp3" type="audio/mpeg">
     </audio>
 
     <script src="confetti.js"></script>
