--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
         </div>
       </div>
 
-    <!-- nanti ejas balik nama mp3 -->
-    <audio id="birthday-audio" autoplay loop>
-        <source src="instrument.mp3" type="audio/mpeg">
+    <audio id="lagu" autoplay loop>
+        <source src="instrument.mp3" type="audio/mp3">
     </audio>
 
     <script src="confetti.js"></script>
