--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                 <p>...</p>
                 <p></p>
                 <p>Nak hadiah?</p>
+                <p>tekan kucing bawah ni</p>
+                <a onclick="this.firstChild.play()" class="button"><audio src="instrument.mp3"></audio></a>
+              
                 <img src="img/pusheencake.png" alt="meow" class="meow">
             </div>
             <!-- Front of the card -->
