--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p></p>
                 <p>...</p>
                 <p></p>
-                <p>Nak hadiah?</p>
+                <p>Cuba tekan kucen bawah ni</p>
                 <a onclick="this.firstChild.play()" class="button"><audio src="instrument.mp3"></audio></a>
               
                 <img src="img/pusheencake.png" alt="meow" class="meow">
