--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
       <div class="flip-card-container">
         <div class="flip-card">
           <div class="flip-card-inner">
-            <!-- Back of the card -->
+            <div class="flip-card-front">
+              <h1>Happy Birthday,</h1>
+              <h2>Arleeda Sofea!</h2>
+              <p>Selamat Hari Lahir</p>
+              <p>生日快乐 </p>
+              <p>お誕生日おめでとう</p>
+              <p>Bon anniversaire</p>
+              <p>عيد ميلاد سعيد</p>
+              <p>SGFwcHkgQmlydGhkYXk=</p>
+              <button id="flipButtonfront">Tekan saya</button>
+            </div>
             <div class="flip-card-back">
                 <h2>Saya taktau nak wish apa</h2>
                 <p></p>
@@ -40,18 +50,7 @@
                   <img src="img/pusheencake.png" alt="meow" class="meow">
                   <audio src="instrument.mp3"></audio>
               </a>
-            </div>
-            <!-- Front of the card -->
-            <div class="flip-card-front">
-                <h1>Happy Birthday,</h1>
-                <h2>Arleeda Sofea!</h2>
-                <p>Selamat Hari Lahir</p>
-                <p>生日快乐 </p>
-                <p>お誕生日おめでとう</p>
-                <p>Bon anniversaire</p>
-                <p>عيد ميلاد سعيد</p>
-                <p>SGFwcHkgQmlydGhkYXk=</p>
-                <button id="flipButton">Tekan saya</button>
+              <button id="flipButtonback">Tekan saya</button>
             </div>
           </div>
         </div>
